# LFU-cache

./: .gitignore  CMakeLists.txt  README.md  caches_comparing.ipynb  lfu_cache.cpp  lfu_cache.hpp  simple_test_gereator.py
include/: google_test.hpp  lfu_cache.hpp  perfect_cache.hpp
src/: google_test.cpp  lfu_cache.cpp  perfect_cache.cpp
